--- a/build.gradle
+++ b/build.gradle
@@ -9,7 +9,9 @@ repositories {
 }
 
 dependencies {
+    testImplementation('org.junit.jupiter:junit-jupiter:5.6.2')
     testImplementation(platform('org.junit:junit-bom:5.8.2'))
+    testImplementation('org.junit.jupiter:junit-jupiter')
     implementation group: 'org.seleniumhq.selenium', name: 'selenium-java', version: '3.141.59'
 
 
@@ -17,4 +19,5 @@ dependencies {
 
 test {
     useJUnitPlatform()
+
 }
